--- a/metadata.yaml
+++ b/metadata.yaml
@@ -24,5 +24,6 @@ subjects:
 - !lcsh 'Children''s poetry, English'
 - !lcsh 'Picture books for children'
 - !lcc 'PZ'
+- GITenberg
 title: Harrison's Amusing Picture and Poetry Book
 url: http://www.gutenberg.org/ebooks/22582
